# Data_extractor

./: README.md  extract_column.py  outputfile.txt  pyproject.toml  test-data-1.csv  test-data-1.xlsx
